[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/door.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]

[node name="Door" type="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.71286, -1.46766 )
collision_layer = 32
collision_mask = 32
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="SoundDoor" type="AudioStreamPlayer" parent="."]
volume_db = -4.0
bus = "SFX"

[node name="TimerTeleport" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Door_body_exited"]
[connection signal="timeout" from="TimerTeleport" to="." method="_on_TimerTeleport_timeout"]
